docs: fix codeblock overlap icon in dark theme

--- a/docs/src/styles/globals.css
+++ b/docs/src/styles/globals.css
@@ -142,6 +142,10 @@
     @apply relative;
   }
 
+  [data-language-icon] {
+    @apply hidden dark:hidden;
+  }
+
   [data-rehype-pretty-code-title] {
     padding: 0.75rem 0 0.75rem 2.5rem;
     @apply mt-4 rounded-t-lg border border-b-0 bg-accent font-cal;
@@ -151,19 +155,23 @@
     @apply pl-12;
   }
 
-  [data-rehype-pretty-code-title] ~ [data-language-icon] {
-    @apply block;
-  }
-
   [data-rehype-pretty-code-title] ~ pre {
     @apply mt-0 rounded-t-none;
   }
 
-  [data-theme="light"] {
+  [data-rehype-pretty-code-title] ~ [data-language-icon][data-theme="light"] {
     @apply block dark:hidden;
   }
 
-  [data-theme="dark"] {
+  [data-rehype-pretty-code-title] ~ [data-language-icon][data-theme="dark"] {
+    @apply hidden dark:block;
+  }
+
+  [data-theme="light"]:not([data-language-icon]) {
+    @apply block dark:hidden;
+  }
+
+  [data-theme="dark"]:not([data-language-icon]) {
     @apply hidden dark:block;
   }
 }
